<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ejemplos Apartado 11 Propietarios y Perros</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listado_de_perros">Listado de perros</string>
    <string name="a_adir_perro">Añadir perro</string>
    <string name="listado_de_propietarios">Listado de propietarios</string>
    <string name="a_adir_propietario">Añadir propietario</string>
    <string name="nombre">Nombre:</string>
    <string name="etiqueta_nombre">Nombre</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="a_adir">Añadir</string>
    <string name="nuevo_perro">Nuevo perro</string>
    <string name="raza">Raza:</string>
    <string name="raza_del_perro">Raza del perro</string>
    <string name="cancelar">Cancelar</string>
    <string name="nuevo_propietario">Nuevo propietario</string>
    <string name="direcci_n">Dirección:</string>
    <string name="direcci_n_del_propietario">Dirección del propietario</string>
    <string name="c_autor_anio" tools:ignore="Typos">&#169; #Autor, #Anio</string>
    <string name="visitar_web_v_rivas">Visitar Web V. Rivas</string>

</resources>