<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    tools:context=".NuevoPropietario">

    <TextView
        android:id="@+id/tv_etiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_propietario"
        android:textSize="24sp"
        android:textStyle="bold" />

    <fragment
        android:id="@+id/fr_nombre_fecha_perro"
        android:name="es.vrivas.ejemplosapartado11propietariosyperros.nombre_fecha_nacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direcci_n" />

        <EditText
            android:id="@+id/et_direccion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/direcci_n_del_propietario"
            android:ems="10"
            android:inputType="textPersonName"
            android:autofillHints="@string/direcci_n_del_propietario" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_nuevo_propietario_add"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:text="@string/a_adir"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/bt_nuevo_propietario_cancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/cancelar"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <fragment
        android:id="@+id/fragment3"
        android:name="es.vrivas.ejemplosapartado11propietariosyperros.ListadoPropietarios"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>